src/test/deca/context/valid/decaObjet/emptyClass/05assignation.deca
class A {
    
}
{
    A a = new A(), b = a;
}